# cumulonimbus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
cumulonimbus/: __init__.py  cli.py
cumulonimbus/core/: analysis.py  collector.py  enrichment.py  exporter.py  exports.py  normalizer.py  parser.py
cumulonimbus/ecs/: schema.py
cumulonimbus/providers/aws/: iam_permissions.py
cumulonimbus/providers/aws/collectors/: __init__.py  cloudtrail.py  guardduty.py  inventory.py  s3logs.py
cumulonimbus/providers/aws/parsers/: __init__.py  cloudtrail.py  guardduty.py  inventory.py  s3access.py  vpcflow.py
cumulonimbus/providers/azure/collectors/: __init__.py
cumulonimbus/providers/azure/parsers/: __init__.py
cumulonimbus/providers/gcp/collectors/: __init__.py
cumulonimbus/providers/gcp/parsers/: __init__.py
cumulonimbus/providers/k8s/collectors/: __init__.py
cumulonimbus/providers/k8s/parsers/: __init__.py
k8s/: job.yaml
k8s/helm/: Chart.yaml  values.yaml
k8s/helm/templates/: cronjob.yaml
sigma/: aws_root_console_login.yml  k8s_privileged_container.yml  k8s_secret_access_anonymous.yml  multicloud_impossible_travel.yml
tests/fixtures/: cloudtrail_sample.json
tests/unit/: test_analysis.py  test_audit_fixes.py  test_aws_extra.py  test_cli.py  test_collectors_moto.py  test_enrichment.py  test_exports.py  test_live_collectors.py  test_multicloud.py  test_parsers.py
