[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cumulonimbus-dfir"
version = "0.1.0"
description = "Cumulus — cloud forensics & IR toolkit. Collect, parse, normalize cloud logs to ECS."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "sltcnb" }]
keywords = ["dfir", "forensics", "incident-response", "cloud", "aws", "azure",
            "gcp", "kubernetes", "ecs", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/sltcnb/cumulonimbus"
Repository = "https://github.com/sltcnb/cumulonimbus"
Issues = "https://github.com/sltcnb/cumulonimbus/issues"

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]
azure = ["azure-identity>=1.15.0", "azure-mgmt-monitor>=6.0.0", "requests>=2.31.0"]
gcp = ["google-cloud-logging>=3.0.0", "google-cloud-securitycenter>=1.28.0"]
k8s = ["kubernetes>=28.0.0"]
geoip = ["geoip2>=4.7.0"]
all = [
    "boto3>=1.34.0",
    "azure-identity>=1.15.0", "azure-mgmt-monitor>=6.0.0", "requests>=2.31.0",
    "google-cloud-logging>=3.0.0", "google-cloud-securitycenter>=1.28.0",
    "kubernetes>=28.0.0", "geoip2>=4.7.0",
]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "moto>=5.0", "boto3>=1.34.0"]

[project.scripts]
cumulonimbus = "cumulonimbus.cli:cli"

[tool.setuptools.packages.find]
include = ["cumulonimbus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# E501 handled by formatter tolerance; keep the high-signal checks.
select = ["E", "F", "W", "I"]
ignore = ["E501", "E741"]
